--- a/index.html
+++ b/index.html
@@ -686,11 +686,12 @@
                     <h2>Featured Events</h2>
                 </div>
                 <div class="content">
-                    <div class="card card-smaller" id="embark">
+                    <div class="card card--smaller" id="embark">
                         <!-- <div class="time">
                             <p>9:30 To 10:30 AM</p>
                         </div> -->
                         <div class="layer"></div>
+                        <div class="layer layer--white"></div>
                         <div class="text">
                             <div class="title">
                                 <h2 style="color: #7D0A0A;">Let's Embark</h2>
@@ -719,7 +720,7 @@
                             <p>9:30 To 10:30 AM</p>
                         </div> -->
                         <div class="layer"></div>
-
+                        <div class="layer layer--white"></div>
                         <div class="text">
                             <div class="title">
                                 <h2 style="color: green;">Code Of Duty III</h2>
@@ -750,6 +751,7 @@
                             <p>9:30 To 10:30 AM</p>
                         </div> -->
                         <div class="layer"></div>
+                        <div class="layer layer--white"></div>
                         <div class="text">
                             <div class="title">
                                 <h2>Under Control</h2>
@@ -908,7 +910,7 @@
                 <div class="content">
                     <div class="subscirbe" data-aos="fade-up"
                         data-aos-duration="1000"
-                        data-aos-once="true">>
+                        data-aos-once="true">
                         <div class="text">
                             <p>Subscribe to our newsletter</p>
                         </div>
