--- a/index.html
+++ b/index.html
@@ -803,98 +803,50 @@
                             </div>
                         </div>
                     </div>
-
+                </div>
+                <div class="content2">
+                    <div class="card2">
+                        <div class="date">
+                            <p class="day">4</p>
+                            <p class="mon">Mar</p>
+                        </div>
+                        <div class="evimg">
+                            <img src="imgs/event11.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <p>Portal Out Of Time</p>
+                        </div>
+                    </div>
+                    <div class="card2">
+                        <div class="date">
+                            <p class="day">9</p>
+                            <p class="mon">Sep</p>
+                        </div>
+                        <div class="evimg">
+                            <img src="imgs/event3.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <p>mind game</p>
+                        </div>
+                    </div>
+                    <div class="card2">
+                        <div class="date">
+                            <p class="day">12</p>
+                            <p class="mon">Jul</p>
+                        </div>
+                        <div class="evimg">
+                            <img src="imgs/thanos.jpg" alt="">
+                        </div>
+                        <div class="title">
+                            <p>embedded infinity war</p>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
-        <!-- End speakers -->
-        <div class="events">
-            <div class="container">
-                <div class="moataz_container">
-                    <div class="two">
-                        <div class="row">
-                            <div class="event">
-                                <div class="event1_img">
-                                    <a href="evenets"><img
-                                            src="imgs/event11.jpg" alt></a>
-                                    <div class="circle">
-                                        <span>
-                                            <span>4</span>
-                                            Mar
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="mocontent">
-                                    <div class="link_loc">
-                                        <h3><a href="events">Portal Beyond
-                                                Now</a></h3>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="event">
-                                <div class="event3_img">
-                                    <a href="evenets"><img src="imgs/event3.jpg"
-                                            alt></a>
-                                    <div class="circle">
-                                        <span>
-                                            <span>9</span>
-                                            Sept
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="mocontent">
-                                    <div class="link_loc">
-                                        <h3><a href="events">Mind Game</a></h3>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="event">
-                                <div class="event5_img">
-                                    <a href="evenets"><img src="imgs/event5.jpg"
-                                            alt></a>
-                                    <div class="circle">
-                                        <span>
-                                            <span>3</span>
-                                            Mar
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="mocontent">
-                                    <div class="link_loc">
-                                        <h3><a href="events">Portal
-                                                "Out Of Time"</a></h3>
-
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="event">
-                                <div class="event8_img">
-                                    <a href="evenets"><img
-                                            src="imgs/robothon.jpg" alt></a>
-                                    <div class="circle">
-                                        <span>
-                                            <span>4</span>
-                                            Oct
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="mocontent">
-                                    <div class="link_loc">
-                                        <h3><a href="events">Step Up
-                                                Robothon</a></h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="three">
-                    <button type="submit">More Featured Events</button>
-                </div> -->
-            </div>
+        <!-- End Events -->
+        
             <!--  End Events Section -->
             <!--  Start Sponsers Section -->
             <div class="sponsers">
