--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div>
             <hr class="separator">
         </div>
-        <div class="yasmeen_container2" >
+        <div class="yasmeen_container2" id="teamss">
             <!-- <img loading="lazy" src="imgs/trend-shape-2.png" class="shapetri" /> -->
             <img loading="lazy" src="imgs/trend-shape-5.png" class="shapelines" />
             <img loading="lazy" src="imgs/trend-shape-3.png" class="shapepyr" />
@@ -277,8 +277,8 @@
                         Picture To
                         See The Name And The Position.</p>
                 </div>
-                <div class="yasmeen-heads" id="teamss">
-                    <div class="heads-slides">
+                <div class="yasmeen-heads" >
+                    <div class="heads-slides" id="teamss">
                         <div class="filter">
                             <div class="himg">
                                 <img loading="lazy" src="imgs/sallam.jpg" alt class />
@@ -670,7 +670,7 @@
                     <div class="text">
                         <div class="title">
                             <h2 style="color: green;">Code Of Duty III</h2>
-                            <h2 class="shadow">Code Of Duty III</h2>
+                            <h2 class="shadow code">Code Of Duty III</h2>
                             <p>winter 2021</p>
                         </div>
                         <p class="description">Many of us think programming
