--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                             future careers. The event also aimed to foster
                             networking opportunities among the participants
                             and speakers to enable them to establish
-                            valuable professional connections. ...</p>
+                            valuable professional connections...</p>
                         <div class="but">
                             <button class="bt1">Show Event Photos</button>
                         </div>
