--- a/index.html
+++ b/index.html
@@ -668,9 +668,9 @@
                     <div class="layer"></div>
                     <div class="layer layer--white"></div>
                     <div class="text">
-                        <div class="title">
+                        <div class="title code">
                             <h2 style="color: green;">Code Of Duty III</h2>
-                            <h2 class="shadow code">Code Of Duty III</h2>
+                            <h2 class="shadow">Code Of Duty III</h2>
                             <p>winter 2021</p>
                         </div>
                         <p class="description">Many of us think programming
