keywords and description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IEEE BUB</title>
-    <link rel="icon" href="imgs/bub.png" />
+    <link rel="icon" href="imgs/bub.png" type="image/png" sizes="32x32">
+    <link rel="icon" href="imgs/bub.png" type="image/png" sizes="192x192">
+    <link rel="apple-touch-icon" href="imgs/bub.png">
+    <!-- Description and keywords -->
+    <meta name="description" content="IEEE Benha University mission is to provide undergraduate students interested in electrical and electronics or related engineering professions with educational, technical, and professional development opportunities; to organize high-quality and relevant technical meetings, and to facilitate professional networking among its members. We also introduce students to the diverse world of electronics and to better prepare them for the profession by allowing them to achieve their passions; in addition to, encouraging youth to be proactive and responsible, and foster the process of gaining, integrating, sharing, and using technology and scientific knowledge for the benefit of humanity">
+    <meta name="keywords" content="IEEE,BUB,IEEE BUB,ieee,ieee bub,bub,IEEE BUB-SB,IEEE BUB SB,ieee bub sb,ieee bub-sb,ieee benha,ieee banha,IEEE BENHA , IEEE BANHA UNIVERSITY , IEEE BANHA , IEEE BENHA UNIVERSITY,ieee benha university">
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/index.css" />
     <!-- Render All Elements Normally -->
